// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`context mode renders correctly 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "paddingBottom": 16,
          "paddingHorizontal": 22,
          "zIndex": 1,
        },
        Object {
          "marginTop": 0,
          "zIndex": -1,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "paddingHorizontal": 22,
        }
      }
    >
      <View>
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "#186078",
              "borderRadius": 8,
              "overflow": "hidden",
              "width": "100%",
            }
          }
          testID="messagePressArea"
        >
          <View>
            <Text
              style={
                Object {
                  "color": "#fff",
                  "fontFamily": "TitilliumWeb-SemiBold",
                  "marginBottom": -16,
                  "opacity": 0.75,
                  "paddingHorizontal": 22,
                  "paddingTop": 16,
                }
              }
            >
              John 
              Doe 
            </Text>
            <Text
              style={
                Array [
                  Object {
                    "fontSize": 17,
                    "paddingHorizontal": 22,
                    "paddingVertical": 22,
                  },
                  Object {
                    "color": "#fff",
                    "opacity": 1,
                  },
                ]
              }
            >
              Test message content
            </Text>
          </View>
          <View
            style={
              Object {
                "flex": 1,
              }
            }
          />
        </View>
        <Image
          source={
            Object {
              "uri": "https://assets.vokeapp.com/images/user/small/avatar.jpg",
            }
          }
          style={
            Object {
              "backgroundColor": "#3295ad",
              "borderRadius": 50,
              "bottom": 0,
              "height": 25,
              "left": -30,
              "position": "absolute",
              "width": 25,
            }
          }
        />
      </View>
      <View
        style={
          Array [
            Object {
              "alignContent": "space-between",
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingTop": 4,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#1d1d26",
              },
              Object {
                "fontFamily": "TitilliumWeb-Regular",
              },
              Object {
                "color": "#fff",
                "fontSize": 13,
                "textAlign": "right",
              },
            ]
          }
        >
          Jan 25 @ 4:44 PM
        </Text>
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "alignSelf": "flex-start",
                "flex": 1,
                "flexDirection": "row",
                "flexWrap": "wrap",
              },
              Object {
                "justifyContent": "flex-end",
              },
            ]
          }
        >
          <View
            forwardedRef={[Function]}
            style={Object {}}
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "backgroundColor": "#fff",
                  "borderRadius": 12,
                  "marginBottom": 4,
                  "marginLeft": 8,
                  "paddingHorizontal": 4,
                  "paddingVertical": 4,
                }
              }
              testID="reactionPill-0"
            >
              <Text
                style={
                  Object {
                    "color": "#186078",
                    "fontSize": 11,
                    "paddingRight": 4,
                  }
                }
              >
                🤗
                 
                3
              </Text>
            </View>
          </View>
          <View
            forwardedRef={[Function]}
            style={Object {}}
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "backgroundColor": "#fff",
                  "borderRadius": 12,
                  "marginBottom": 4,
                  "marginLeft": 8,
                  "paddingHorizontal": 4,
                  "paddingVertical": 4,
                }
              }
              testID="reactionPill-1"
            >
              <Text
                style={
                  Object {
                    "color": "#186078",
                    "fontSize": 11,
                    "paddingRight": 4,
                  }
                }
              >
                😄
                 
                1
              </Text>
            </View>
          </View>
          <View
            forwardedRef={[Function]}
            style={Object {}}
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "backgroundColor": "#fff",
                  "borderRadius": 12,
                  "marginBottom": 4,
                  "marginLeft": 8,
                  "paddingHorizontal": 4,
                  "paddingVertical": 4,
                }
              }
              testID="reactionPill-2"
            >
              <Text
                style={
                  Object {
                    "color": "#186078",
                    "fontSize": 11,
                    "paddingRight": 4,
                  }
                }
              >
                ♥️
                 
                3
              </Text>
            </View>
          </View>
          <View
            forwardedRef={[Function]}
            style={Object {}}
          >
            <View
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "backgroundColor": "#fff",
                  "borderRadius": 12,
                  "marginBottom": 4,
                  "marginLeft": 8,
                  "paddingHorizontal": 4,
                  "paddingVertical": 4,
                }
              }
              testID="reactionPill-3"
            >
              <Text
                style={
                  Object {
                    "color": "#186078",
                    "fontSize": 11,
                    "paddingRight": 4,
                  }
                }
              >
                😂
                 
                1
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "paddingBottom": 16,
        "paddingHorizontal": 22,
        "zIndex": 1,
      },
      Object {
        "marginTop": 0,
        "zIndex": -1,
      },
    ]
  }
>
  <View
    style={
      Object {
        "paddingHorizontal": 22,
      }
    }
  >
    <View>
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "#186078",
            "borderRadius": 8,
            "overflow": "hidden",
            "width": "100%",
          }
        }
        testID="messagePressArea"
      >
        <View>
          <Text
            style={
              Object {
                "color": "#fff",
                "fontFamily": "TitilliumWeb-SemiBold",
                "marginBottom": -16,
                "opacity": 0.75,
                "paddingHorizontal": 22,
                "paddingTop": 16,
              }
            }
          >
            John 
            Doe 
          </Text>
          <Text
            style={
              Array [
                Object {
                  "fontSize": 17,
                  "paddingHorizontal": 22,
                  "paddingVertical": 22,
                },
                Object {
                  "color": "#fff",
                  "opacity": 1,
                },
              ]
            }
          >
            Test message content
          </Text>
        </View>
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        />
      </View>
      <Image
        source={
          Object {
            "uri": "https://assets.vokeapp.com/images/user/small/avatar.jpg",
          }
        }
        style={
          Object {
            "backgroundColor": "#3295ad",
            "borderRadius": 50,
            "bottom": 0,
            "height": 25,
            "left": -30,
            "position": "absolute",
            "width": 25,
          }
        }
      />
    </View>
    <View
      style={
        Array [
          Object {
            "alignContent": "space-between",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingTop": 4,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#1d1d26",
            },
            Object {
              "fontFamily": "TitilliumWeb-Regular",
            },
            Object {
              "color": "#fff",
              "fontSize": 13,
              "textAlign": "right",
            },
          ]
        }
      >
        Jan 25 @ 4:44 PM
      </Text>
      <View
        style={
          Array [
            Object {
              "alignItems": "flex-start",
              "alignSelf": "flex-start",
              "flex": 1,
              "flexDirection": "row",
              "flexWrap": "wrap",
            },
            Object {
              "justifyContent": "flex-end",
            },
          ]
        }
      >
        <View
          forwardedRef={[Function]}
          style={Object {}}
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#fff",
                "borderRadius": 12,
                "marginBottom": 4,
                "marginLeft": 8,
                "paddingHorizontal": 4,
                "paddingVertical": 4,
              }
            }
            testID="reactionPill-0"
          >
            <Text
              style={
                Object {
                  "color": "#186078",
                  "fontSize": 11,
                  "paddingRight": 4,
                }
              }
            >
              🤗
               
              3
            </Text>
          </View>
        </View>
        <View
          forwardedRef={[Function]}
          style={Object {}}
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#fff",
                "borderRadius": 12,
                "marginBottom": 4,
                "marginLeft": 8,
                "paddingHorizontal": 4,
                "paddingVertical": 4,
              }
            }
            testID="reactionPill-1"
          >
            <Text
              style={
                Object {
                  "color": "#186078",
                  "fontSize": 11,
                  "paddingRight": 4,
                }
              }
            >
              😄
               
              1
            </Text>
          </View>
        </View>
        <View
          forwardedRef={[Function]}
          style={Object {}}
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#fff",
                "borderRadius": 12,
                "marginBottom": 4,
                "marginLeft": 8,
                "paddingHorizontal": 4,
                "paddingVertical": 4,
              }
            }
            testID="reactionPill-2"
          >
            <Text
              style={
                Object {
                  "color": "#186078",
                  "fontSize": 11,
                  "paddingRight": 4,
                }
              }
            >
              ♥️
               
              3
            </Text>
          </View>
        </View>
        <View
          forwardedRef={[Function]}
          style={Object {}}
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "#fff",
                "borderRadius": 12,
                "marginBottom": 4,
                "marginLeft": 8,
                "paddingHorizontal": 4,
                "paddingVertical": 4,
              }
            }
            testID="reactionPill-3"
          >
            <Text
              style={
                Object {
                  "color": "#186078",
                  "fontSize": 11,
                  "paddingRight": 4,
                }
              }
            >
              😂
               
              1
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
